Spacing is correct now

--- a/thermometer.css
+++ b/thermometer.css
@@ -1,6 +1,6 @@
 #thermometer {
+	display: block;
 	width: 100%;
-	height: 1em;
 }
 
 #thermometer li {
@@ -32,7 +32,7 @@
 	-moz-border-radius: 20px 0 0 20px;
 }
 
-#thermometer li:last-child span, #thermometer li.last span {
+#thermometer li:last-child span/*, #thermometer li.last span*/ {
 	border-right: 1px solid #111;
 	-webkit-border-radius: 0 20px 20px 0;
 	-moz-border-radius: 0 20px 20px 0;
